<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sc.gestiononglets.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1000"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_accessibility"
        android:orderInCategory="100"
        android:title="@string/accessibility"
        android:icon="@drawable/ic_accesibility_sign"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_round_account_button_with_user_inside"
        android:orderInCategory="200"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_shopping_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="300"
        android:title="@string/add_shopping_cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alarm"
        android:icon="@drawable/ic_alarm_clock"
        android:orderInCategory="400"
        android:title="@string/alarm"
        app:showAsAction="ifRoom" />
</menu>